Mobile bug fix (#675)
* Fix mobile nav overlay

* fix mobile view footerNewsletter help text spacing

* Make cardRecirculation text to be breake when text is too long

--- a/src/components/FooterNewsletter/FooterNewsletter.scss
+++ b/src/components/FooterNewsletter/FooterNewsletter.scss
@@ -26,7 +26,11 @@
   }
 
   &__help-text {
-    top: spacing(-4);
+    top: spacing(-8);
+
+    @media ($medium-up) {
+      top: spacing(-4);
+    }
   }
 
   &__text {
